tests/models/struct/unnamed/u32/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    u32
);
fn main() {}
